Archivo ini completado.

--- a/view/informe_347.html
+++ b/view/informe_347.html
@@ -21,7 +21,7 @@
             
             {if="$fsc->url_descarga!=''"}
             <a class="btn btn-sm btn-default" href="{$fsc->url_descarga}">
-               <span class="glyphicon glyphicon-download"></span> &nbsp; Descargar
+               <span class="glyphicon glyphicon-download-alt"></span> &nbsp; Descargar
             </a>
             {/if}
          </div>
