--- a/view/informe_347.html
+++ b/view/informe_347.html
@@ -8,10 +8,10 @@
                <h1>
                   <span class="glyphicon glyphicon-book"></span>
                   Modelo 347
-                  <a class="btn btn-xs btn-default" href="{$fsc->url()}" title="Recargar la página">
+                  <a class="btn btn-xs btn-default hidden-print" href="{$fsc->url()}" title="Recargar la página">
                      <span class="glyphicon glyphicon-refresh"></span>
                   </a>
-                  <span class="btn-group">
+                  <span class="btn-group hidden-print">
                   {loop="$fsc->extensions"}
                      {if="$value->type=='button'"}
                      <a href="index.php?page={$value->from}{$value->params}" class="btn btn-xs btn-default">{$value->text}</a>
@@ -29,7 +29,7 @@
             </div>
          </div>
       </div>
-      <div class="row">
+      <div class="row hidden-print">
          <div class="col-sm-2">
             <div class="form-group">
                Ejercicio:
@@ -69,9 +69,14 @@
          <div class="col-sm-6 text-right">
             {if="$fsc->url_descarga!=''"}
             <br/>
-            <a class="btn btn-sm btn-default" href="{$fsc->url_descarga}">
-               <span class="glyphicon glyphicon-download-alt"></span>&nbsp; Descargar
-            </a>
+            <div class="btn-group">
+               <a class="btn btn-sm btn-default" onclick="window.print();">
+                  <span class="glyphicon glyphicon-print" aria-hidden="true"></span>
+               </a>
+               <a class="btn btn-sm btn-default" href="{$fsc->url_descarga}">
+                  <span class="glyphicon glyphicon-download-alt"></span>&nbsp; Descargar
+               </a>
+            </div>
             {/if}
          </div>
       </div>
