Pequeñas correcciones para mejorar la impresión del informe.

--- a/view/informe_347.html
+++ b/view/informe_347.html
@@ -136,11 +136,11 @@
                         <td>{$value['codpostal']}</td>
                         <td>{$value['ciudad']}</td>
                         <td>{$value['provincia']}</td>
-                        <td class="text-right">{$fsc->show_precio($value['t1'])}</td>
-                        <td class="text-right">{$fsc->show_precio($value['t2'])}</td>
-                        <td class="text-right">{$fsc->show_precio($value['t3'])}</td>
-                        <td class="text-right">{$fsc->show_precio($value['t4'])}</td>
-                        <td class="text-right">{$fsc->show_precio($value['total'])}</td>
+                        <td class="text-right" style="white-space: nowrap;">{$fsc->show_precio($value['t1'])}</td>
+                        <td class="text-right" style="white-space: nowrap;">{$fsc->show_precio($value['t2'])}</td>
+                        <td class="text-right" style="white-space: nowrap;">{$fsc->show_precio($value['t3'])}</td>
+                        <td class="text-right" style="white-space: nowrap;">{$fsc->show_precio($value['t4'])}</td>
+                        <td class="text-right" style="white-space: nowrap;">{$fsc->show_precio($value['total'])}</td>
                     </tr>
                     {/loop}
                     <tr class="info">
@@ -149,11 +149,11 @@
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td class="text-right"><b>{$fsc->show_precio($fsc->datos_cli['totales'][0])}</b></td>
-                        <td class="text-right"><b>{$fsc->show_precio($fsc->datos_cli['totales'][1])}</b></td>
-                        <td class="text-right"><b>{$fsc->show_precio($fsc->datos_cli['totales'][2])}</b></td>
-                        <td class="text-right"><b>{$fsc->show_precio($fsc->datos_cli['totales'][3])}</b></td>
-                        <td class="text-right"><b>{$fsc->show_precio($fsc->datos_cli['totales'][4])}</b></td>
+                        <td class="text-right" style="white-space: nowrap;"><b>{$fsc->show_precio($fsc->datos_cli['totales'][0])}</b></td>
+                        <td class="text-right" style="white-space: nowrap;"><b>{$fsc->show_precio($fsc->datos_cli['totales'][1])}</b></td>
+                        <td class="text-right" style="white-space: nowrap;"><b>{$fsc->show_precio($fsc->datos_cli['totales'][2])}</b></td>
+                        <td class="text-right" style="white-space: nowrap;"><b>{$fsc->show_precio($fsc->datos_cli['totales'][3])}</b></td>
+                        <td class="text-right" style="white-space: nowrap;"><b>{$fsc->show_precio($fsc->datos_cli['totales'][4])}</b></td>
                     </tr>
                 </table>
             </div>
@@ -202,11 +202,11 @@
                         <td>{$value['codpostal']}</td>
                         <td>{$value['ciudad']}</td>
                         <td>{$value['provincia']}</td>
-                        <td class="text-right">{$fsc->show_precio($value['t1'])}</td>
-                        <td class="text-right">{$fsc->show_precio($value['t2'])}</td>
-                        <td class="text-right">{$fsc->show_precio($value['t3'])}</td>
-                        <td class="text-right">{$fsc->show_precio($value['t4'])}</td>
-                        <td class="text-right">{$fsc->show_precio($value['total'])}</td>
+                        <td class="text-right" style="white-space: nowrap;">{$fsc->show_precio($value['t1'])}</td>
+                        <td class="text-right" style="white-space: nowrap;">{$fsc->show_precio($value['t2'])}</td>
+                        <td class="text-right" style="white-space: nowrap;">{$fsc->show_precio($value['t3'])}</td>
+                        <td class="text-right" style="white-space: nowrap;">{$fsc->show_precio($value['t4'])}</td>
+                        <td class="text-right" style="white-space: nowrap;">{$fsc->show_precio($value['total'])}</td>
                     </tr>
                     {/loop}
                     <tr class="info">
@@ -215,11 +215,11 @@
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td class="text-right"><b>{$fsc->show_precio($fsc->datos_pro['totales'][0])}</b></td>
-                        <td class="text-right"><b>{$fsc->show_precio($fsc->datos_pro['totales'][1])}</b></td>
-                        <td class="text-right"><b>{$fsc->show_precio($fsc->datos_pro['totales'][2])}</b></td>
-                        <td class="text-right"><b>{$fsc->show_precio($fsc->datos_pro['totales'][3])}</b></td>
-                        <td class="text-right"><b>{$fsc->show_precio($fsc->datos_pro['totales'][4])}</b></td>
+                        <td class="text-right" style="white-space: nowrap;"><b>{$fsc->show_precio($fsc->datos_pro['totales'][0])}</b></td>
+                        <td class="text-right" style="white-space: nowrap;"><b>{$fsc->show_precio($fsc->datos_pro['totales'][1])}</b></td>
+                        <td class="text-right" style="white-space: nowrap;"><b>{$fsc->show_precio($fsc->datos_pro['totales'][2])}</b></td>
+                        <td class="text-right" style="white-space: nowrap;"><b>{$fsc->show_precio($fsc->datos_pro['totales'][3])}</b></td>
+                        <td class="text-right" style="white-space: nowrap;"><b>{$fsc->show_precio($fsc->datos_pro['totales'][4])}</b></td>
                     </tr>
                 </table>
             </div>
